--- a/src/app/dashboard/carwash-dashboard/carwash-dashboard.component.html
+++ b/src/app/dashboard/carwash-dashboard/carwash-dashboard.component.html
@@ -1,21 +1,78 @@
-<mat-card>
+<div class="dashboard-container">
   <h2>Car Wash Dashboard</h2>
-  <table mat-table [dataSource]="cars">
+
+  <!-- Add Car Form -->
+  <form (ngSubmit)="addCar()" class="car-form">
+    <mat-form-field>
+      <input matInput placeholder="License Plate" [(ngModel)]="newCar.licensePlate" name="licensePlate" required>
+    </mat-form-field>
+
+    <mat-radio-group [(ngModel)]="useExistingUser" name="userType">
+      <mat-radio-button value="existing">Existing Customer</mat-radio-button>
+      <mat-radio-button value="new">New Customer</mat-radio-button>
+    </mat-radio-group>
+
+    <div *ngIf="useExistingUser === 'existing'">
+      <mat-form-field>
+        <mat-label>Select Customer</mat-label>
+        <mat-select [(ngModel)]="selectedCustomer" name="customer">
+          <mat-option *ngFor="let customer of customers" [value]="customer._id">
+            {{ customer.name }} - {{ customer.email }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <div *ngIf="useExistingUser === 'new'">
+      <mat-form-field>
+        <input matInput placeholder="Customer Name" [(ngModel)]="newCustomer.name" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Email" [(ngModel)]="newCustomer.email" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" placeholder="Password" [(ngModel)]="newCustomer.password" required>
+      </mat-form-field>
+    </div>
+
+    <button mat-raised-button color="primary" type="submit">Add Car</button>
+  </form>
+
+  <!-- Cars List -->
+  <table mat-table [dataSource]="cars" class="car-table">
+    <!-- Columns -->
     <ng-container matColumnDef="licensePlate">
       <th mat-header-cell *matHeaderCellDef>License Plate</th>
       <td mat-cell *matCellDef="let car">{{ car.licensePlate }}</td>
     </ng-container>
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef>Status</th>
-      <td mat-cell *matCellDef="let car">{{ car.status }}</td>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Actions</th>
+
+    <ng-container matColumnDef="customer">
+      <th mat-header-cell *matHeaderCellDef>Customer</th>
       <td mat-cell *matCellDef="let car">
-        <button mat-button color="primary" (click)="updateStatus(car._id)">Update Status</button>
+        {{ car.owner?.name || 'New Customer' }}
+        <span *ngIf="car.owner?.email">({{ car.owner?.email }})</span>
       </td>
     </ng-container>
+
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef>Status</th>
+      <td mat-cell *matCellDef="let car">
+        <mat-select [(value)]="car.status" (selectionChange)="updateStatus(car._id, $event.value)">
+          <mat-option *ngFor="let status of statusOptions" [value]="status">
+            {{ status | titlecase }}
+          </mat-option>
+        </mat-select>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="createdAt">
+      <th mat-header-cell *matHeaderCellDef>Date Received</th>
+      <td mat-cell *matCellDef="let car">
+        {{ car.createdAt | date:'medium' }}
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-</mat-card>
+</div>
