--- a/src/app/dashboard/individual-dashboard/individual-dashboard.component.html
+++ b/src/app/dashboard/individual-dashboard/individual-dashboard.component.html
@@ -1,27 +1,46 @@
 <mat-card>
   <h2>My Cars</h2>
+
+  <!-- Add Car Form -->
   <form (ngSubmit)="addCar()">
     <mat-form-field>
       <input matInput placeholder="License Plate" [(ngModel)]="newCar.licensePlate" name="licensePlate" required>
     </mat-form-field>
+
     <mat-form-field>
-      <mat-label>Car Wash</mat-label>
+      <mat-label>Select Car Wash</mat-label>
       <mat-select [(ngModel)]="newCar.carWashId" name="carWashId" required>
-        <mat-option *ngFor="let carWash of carWashes" [value]="carWash._id">{{ carWash.name }}</mat-option>
+        <mat-option *ngFor="let carWash of carWashes" [value]="carWash._id">
+          {{ carWash.name }} - {{ carWash.location }}
+        </mat-option>
       </mat-select>
     </mat-form-field>
+
     <button mat-raised-button color="primary" type="submit">Add Car</button>
   </form>
 
+  <!-- Cars List -->
   <table mat-table [dataSource]="cars">
     <ng-container matColumnDef="licensePlate">
       <th mat-header-cell *matHeaderCellDef>License Plate</th>
       <td mat-cell *matCellDef="let car">{{ car.licensePlate }}</td>
     </ng-container>
+
+    <ng-container matColumnDef="carWash">
+      <th mat-header-cell *matHeaderCellDef>Car Wash</th>
+      <td mat-cell *matCellDef="let car">{{ car.carWash?.name }}</td>
+    </ng-container>
+
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef>Status</th>
       <td mat-cell *matCellDef="let car">{{ car.status }}</td>
     </ng-container>
+
+    <ng-container matColumnDef="createdAt">
+      <th mat-header-cell *matHeaderCellDef>Date Added</th>
+      <td mat-cell *matCellDef="let car">{{ car.createdAt | date:'medium' }}</td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
